syntax = "proto3";

package ring;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message Desc {
	map<string,IngesterDesc> ingesters = 1 [(gogoproto.nullable) = false];
	reserved 2;
}

message IngesterDesc {
	reserved 4, 5; // old, deprecated fields

	string addr = 1;

	// Unix timestamp (with seconds precision) of the last heartbeat sent
	// by this instance.
	int64 timestamp = 2;

	IngesterState state = 3;
	repeated uint32 tokens = 6;
	string zone = 7;

	// Unix timestamp (with seconds precision) of when the instance has been registered
	// to the ring. This field has not been called "joined_timestamp" intentionally, in order
	// to not introduce any misunderstanding with the instance's "joining" state.
	int64 registered_timestamp = 8;
}

enum IngesterState {
	ACTIVE = 0;
	LEAVING = 1;

	PENDING = 2;
	JOINING = 3;

	// This state is only used by gossiping code to distribute information about
	// ingesters that have been removed from the ring. Ring users should not use it directly.
	LEFT = 4;
}
